--- a/client/src/app/categories/categories.component.html
+++ b/client/src/app/categories/categories.component.html
@@ -30,7 +30,7 @@
     </td>
 
   </ng-container>
-  
+
   <!-- goto Column -->
   <ng-container matColumnDef=">">
     <th mat-header-cell *matHeaderCellDef></th>
@@ -42,3 +42,10 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<mat-progress-spinner
+class="example-margin"
+[color]="color"
+[mode]="mode"
+[value]="value">
+</mat-progress-spinner>
