--- a/client/src/app/shared/spinner/spinner.component.scss
+++ b/client/src/app/shared/spinner/spinner.component.scss
@@ -2,5 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  opacity: 0.5;
+  background-color: white;
 }
-
