--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -19,3 +19,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .f-push-left {
   justify-content: flex-start;
 }
+
+
+.modalM {
+  width: 800px;
+}
